Fix code to work on Safari

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -96,7 +96,7 @@ button:hover {
   padding:10px;
   max-width: 40%;
   line-height: 1.0;
-  font-size:3.0rem;
+  font-size:2.5rem;
   color: rgba(255, 255, 255, 1);
   text-shadow: 3px 3px #000000;
   font-family: Arial, Helvetica, sans-serif;
